Fix spacing for translations
rel: https://github.com/w3c/wai-translations/issues/34

--- a/components/navigations/controls.css
+++ b/components/navigations/controls.css
@@ -56,6 +56,9 @@
   padding: 0;
   margin:0;
   display: inline-block;
+  &:first-child {
+    margin-right: 4px;
+  }
 }
 .languagelist>ul>li:first-child:before {
   display:none;
